fix: fix: documentation return PageBookResponse.java for pagination
